# Secrets-server

./: pyproject.toml  requirements.txt
ballroom/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
ballroom/migrations/: 0001_initial.py  0002_user_sur_name.py  0003_entry.py
ballroom/tests/: test_competition.py  test_competition_program.py  test_member.py  test_point.py  test_team.py  test_trainer.py  test_type_ballroom_dancing.py
djangoProject/: settings.py  urls.py
