[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["N777 <Egorov_vadim2001@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.5"
pillow = "^9.4.0"
django-filter = "^22.1"
django-cors-headers = "^3.14.0"
djoser = "^2.1.0"
coverage = "^7.2.2"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
